# digidoc-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: der.rs  digidoc.rs  error.rs  lib.rs  ocsp.rs  test_keys.rs  tsa.rs  xmldsig.rs
src/digidoc/: builder.rs  mod.rs  reader.rs
src/pki/: mod.rs  ocsp.rs  tsa.rs
src/xmldsig/: envelope.rs  mod.rs  xades.rs
