[package]
name = "digidoc"
version = "0.1.0"
edition = "2024"
description = "A client library for BDOC/ASiC-E digital signatures (DigiDoc)"
license = "MIT"
repository = "https://github.com/wearekesk/digidoc-rs"
readme = "README.md"

[dependencies]
xml-sec = { version = "0.1.7", features = ["xmldsig"] }
roxmltree = "0.21.1"
x509-parser = "0.18.1"
zip = "8.6.0"
quick-xml = { version = "0.40.1", features = ["serde", "serialize"] }
xml_serde = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
base64 = "0.22.1"
sha2 = "0.11.0"
sha1 = "0.11.0"
rsa = { version = "0.10.0-rc.18", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
signature = "2.2.0"
